--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="container">
               <div class="content-center">
-                <div class="cc-profile-image"><a href="#"><img src="images/1.PNG" alt="Image" /></a></div>
+                <div class="cc-profile-image"><a href="#"><img src="images/1.jpg" alt="Image" /></a></div>
                 <div class="h2 title-1">I am Guo Xiao Li</div>
                 <p class="category text-white">Senior Full Stack Developer</p>
               </div>
