--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                           <ul class="list-inline item-details">
                             <li>Technologies:
                               <strong>
-                                <a>WordPress, WooCommerce, React Native, AWS, FireBase, Payment Gateway, Google Map
+                                <a>WordPress, WooCommerce, React Native, AWS, Google Map
                                   API</a>
                               </strong>
                             </li>
@@ -591,8 +591,7 @@
                           <ul class="list-inline item-details">
                             <li>Technologies:
                               <strong>
-                                <a>WordPress, WooCommerce, React Native, AWS, FireBase, Payment Gateway, Google Map
-                                  API</a>
+                                <a>React, React Native, Next.js, Payment Gateway, MongoDB</a>
                               </strong>
                             </li>
                             <li>Link:
@@ -685,7 +684,7 @@
                           <ul class="list-inline item-details">
                             <li>Technologies:
                               <strong>
-                                <a>WordPress, WooCommerce, React Native, AWS, FireBase, Payment Gateway, Google Map
+                                <a>WordPress, WooCommerce, React Native, AWS, FireBase, Google Map
                                   API</a>
                               </strong>
                             </li>
